--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,24 @@
 ---
 import Layout from '../layouts/Layout.astro';
 
+const res = await fetch('https://fakestoreapi.com/products');
+const products = await res.json();
+
 ---
 
 <Layout>
+	  <h1>Products</h1>
+  <div class="grid grid-cols-3 gap-4">
+	{products.map((product: { id: number; title: string; price: number; category: string }) => (
+	  <div class="bg-white p-4 rounded-lg shadow-lg">
+		<img class="h-72 w-auto" src={`https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg`} alt={product.title} />
+		<h2>{product.title}</h2>
+
+		<p>{product.category}</p>
+		<p>${product.price}</p>
+	  </div>
+	))}
+	  </div>
+
+
 </Layout>
