--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,16 +1,17 @@
 ---
+import Header from "../components/header.astro";
 import "../styles/global.css";
 ---
 
 <!doctype html>
 <html lang="es">
-	<head>
-		<meta charset="UTF-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<title>Tienda Online</title>
-	</head>
-	<body>
-		<slot />
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <title>Tienda Online</title>
+  </head>
+  <Header />
+  <body class="bg-gray-100">
+    <slot />
+  </body>
 </html>
-
