--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,45 +1,18 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import Card from "../components/Card.astro";
+import type { Product } from "../types/Product";
 
 const res = await fetch("https://fakestoreapi.com/products");
-const products = await res.json();
+const products: Product[] = await res.json();
 ---
 
 <Layout>
   <div
     class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 max-w-6xl mx-auto p-6 bg-gray-100"
   >
-    {
-      products.map(
-        (product: {
-          id: number;
-          title: string;
-          price: number;
-          category: string;
-          image: string;
-        }) => (
-          <div class="bg-white p-6 rounded-xl shadow-lg transform transition duration-300 hover:scale-105 hover:shadow-2xl flex flex-col justify-between items-center">
-            <img
-              class="h-48 w-auto mx-auto rounded-md"
-              src={product.image}
-              alt={product.title}
-            />
-            <div class="text-center w-full mt-4">
-              <h2 class="text-lg font-semibold text-gray-800">
-                {product.title}
-              </h2>
-
-              <div class="flex justify-between items-center mt-4 text-sm text-gray-600">
-                <p class="italic">{product.category}</p>
-                <p class="font-bold text-lg text-green-600">${product.price}</p>
-              </div>
-            </div>
-            <button class="mt-4 bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-600 transition duration-300">
-              Add to Cart
-            </button>
-          </div>
-        )
-      )
-    }
+    {products.map((product) => (
+      <Card product={product} />
+    ))}
   </div>
-</Layout>
+</Layout> 
