--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,26 +1,40 @@
 ---
 import type { Product } from "../types/Product";
 
+import CartSVG from "../assets/cart.svg";
+
 const { product } = Astro.props as { product: Product };
 ---
 
-<div class="bg-white p-6 rounded-xl shadow-lg transform transition duration-300 hover:scale-105 hover:shadow-2xl flex flex-col justify-between items-center">
+<div
+  class="bg-white p-6 rounded-xl shadow-lg transform transition duration-300 hover:scale-105 hover:shadow-2xl flex flex-col justify-between items-center"
+>
   <img
-    class="h-48 w-auto mx-auto rounded-md"
+    class="h-48 w-auto mx-auto rounded-md object-cover"
     src={product.image}
     alt={product.title}
   />
   <div class="text-center w-full mt-4">
-    <h2 class="text-lg font-semibold text-gray-800">{product.title}</h2>
+    <h2 class="text-lg font-semibold text-gray-800 truncate">
+      {product.title}
+    </h2>
     <div class="flex justify-between items-center mt-4 text-sm text-gray-600">
       <p class="italic">{product.category}</p>
       <p class="font-bold text-lg text-green-600">${product.price}</p>
     </div>
-    <p>
-      {Array.from({ length: Math.round(product.rating.rate) }, () => '⭐').join('')} 
+    <p class="mt-2 text-yellow-500">
+      {
+        Array.from(
+          { length: Math.round(product.rating.rate) },
+          () => "⭐"
+        ).join("")
+      }
     </p>
   </div>
-  <button class="mt-4 bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-600 transition duration-300">
-    Add to Cart
+  <button
+    class="mt-4 bg-blue-500 text-white py-2 px-4 rounded-lg flex items-center justify-center gap-2 hover:bg-blue-600 transition duration-300 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-offset-2"
+  >
+    <span>Agregar al carrito</span>
+    <CartSVG class="w-6 h-6" />
   </button>
 </div>
