--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -7,7 +7,7 @@ const { product } = Astro.props as { product: Product };
 ---
 
 <article
-  class="bg-white p-6 rounded-xl shadow-lg transform transition duration-300 hover:scale-105 hover:shadow-2xl flex flex-col justify-between items-center"
+  class="bg-white p-6 rounded-xl shadow-lg transform transition duration-300 hover:scale-105 hover:shadow-2xl flex flex-col justify-between items-center relative"
   itemscope
   itemtype="https://schema.org/Product"
 >
@@ -26,15 +26,20 @@ const { product } = Astro.props as { product: Product };
     <p class="italic" itemprop="category">{product.category}</p>
     <p class="font-bold text-lg text-green-600" itemprop="price">${product.price}</p>
   </div>
+  <div
+    class="absolute inset-0 bg-white bg-opacity-90 p-4 text-gray-700 opacity-0 hover:opacity-100 transition-opacity duration-300 ease-in-out flex items-center justify-center text-center"
+  >
+    <p itemprop="description">{product.description}</p>
+  </div>
   <p class="mt-2 text-yellow-500" itemprop="aggregateRating" itemscope itemtype="https://schema.org/AggregateRating">
     <meta itemprop="ratingValue" content={product.rating.rate.toString()} />
     <meta itemprop="reviewCount" content={product.rating.count.toString()} />
     {Array.from({ length: Math.round(product.rating.rate) }, () => "⭐").join("")}
   </p>
   <p itemprop="reviewCount">{product.rating.count} opiniones</p>
-  <p class="mt-2 text-gray-700 hidden" itemprop="description">{product.description}</p>
+  <!-- Botón que aparece al hacer hover -->
   <button
-    class="mt-4 bg-blue-500 text-white py-2 px-4 rounded-lg flex items-center justify-center gap-2 hover:bg-blue-600 transition duration-300 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-offset-2"
+    class="mt-4 bg-blue-500 text-white py-2 px-4 rounded-lg flex items-center justify-center gap-2 opacity-0 hover:opacity-100 transition-opacity duration-300 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-offset-2"
   >
     <span>Agregar al carrito</span>
     <CartSVG class="w-6 h-6" />
