--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -22,19 +22,32 @@ const { product } = Astro.props as { product: Product };
       {product.title}
     </h3>
   </header>
-  <div class="flex justify-between w-full items-center mt-4 text-sm text-gray-600">
+  <div
+    class="flex justify-between w-full items-center mt-4 text-sm text-gray-600"
+  >
     <p class="italic" itemprop="category">{product.category}</p>
-    <p class="font-bold text-lg text-green-600" itemprop="price">${product.price}</p>
+    <p class="font-bold text-lg text-green-600" itemprop="price">
+      ${product.price}
+    </p>
   </div>
   <div
     class="absolute inset-0 bg-white bg-opacity-90 p-4 text-gray-700 opacity-0 hover:opacity-100 transition-opacity duration-300 ease-in-out flex items-center justify-center text-center"
   >
     <p itemprop="description">{product.description}</p>
   </div>
-  <p class="mt-2 text-yellow-500" itemprop="aggregateRating" itemscope itemtype="https://schema.org/AggregateRating">
+  <p
+    class="mt-2 text-yellow-500"
+    itemprop="aggregateRating"
+    itemscope
+    itemtype="https://schema.org/AggregateRating"
+  >
     <meta itemprop="ratingValue" content={product.rating.rate.toString()} />
     <meta itemprop="reviewCount" content={product.rating.count.toString()} />
-    {Array.from({ length: Math.round(product.rating.rate) }, () => "⭐").join("")}
+    {
+      Array.from({ length: Math.round(product.rating.rate) }, () => "⭐").join(
+        ""
+      )
+    }
   </p>
   <p itemprop="reviewCount">{product.rating.count} opiniones</p>
   <!-- Botón que aparece al hacer hover -->
