--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,26 @@
 ---
-
+import HandbagSvg from "../assets/handbag.svg";
+import CartSVG from "../assets/cart.svg";
 ---
 
-<div class="max-w-5xl mx-auto p-4">
-  <h1 class="text-2xl font-bold">Tienda Online</h1>
+<div class="max-w-5xl mx-auto p-4 flex justify-between items-center">
+  <div class="flex items-center gap-4">
+    <HandbagSvg class="w-12 h-12" />
+    <div class="flex flex-col">
+      <span class="text-gray-600">¡Bienvenido a la</span>
+      <span class="text-2xl font-bold">Tienda Online!</span>
+      <p class="text-gray-600">
+        ¡Compra los mejores productos al mejor precio!
+      </p>
+    </div>
+  </div>
+
+  <div class="flex justify-end gap-4">
+    <span
+      class="bg-blue-500 text-white py-2 px-4 rounded-lg flex items-center gap-2"
+    >
+      <span>0</span>
+      <CartSVG class="w-6 h-6" />
+    </span>
+  </div>
 </div>
