--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -35,7 +35,7 @@ const { product } = Astro.props as { product: Product };
   <div
     class="absolute inset-0 bg-white bg-opacity-90 p-4 text-gray-700 opacity-0 hover:opacity-100 transition-opacity duration-300 ease-in-out flex flex-col items-center justify-between text-center rounded-xl"
   >
-    <p class="mt-4" itemprop="description">{product.description}</p>
+    <p class="mt-4 max-h-60" itemprop="description">{product.description}</p>
     <button
       class="bg-blue-500 text-white py-2 px-4 rounded-lg flex items-center justify-center gap-2 hover:bg-blue-600 transition duration-300 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-offset-2"
     >
