--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -3,6 +3,8 @@ import type { Product } from "../types/Product";
 
 import CartSVG from "../assets/cart.svg";
 
+import AddToCartButton from "./AddToCartButton";
+
 const { product } = Astro.props as { product: Product };
 ---
 
@@ -36,12 +38,7 @@ const { product } = Astro.props as { product: Product };
     class="absolute inset-0 bg-white bg-opacity-90 p-4 text-gray-700 opacity-0 hover:opacity-100 transition-opacity duration-300 ease-in-out flex flex-col items-center justify-between text-center rounded-xl"
   >
     <p class="mt-4 max-h-60" itemprop="description">{product.description}</p>
-    <button
-      class="bg-blue-500 text-white py-2 px-4 rounded-lg flex items-center justify-center gap-2 hover:bg-blue-600 transition duration-300 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-offset-2"
-    >
-      <span>Agregar al carrito</span>
-      <CartSVG class="w-6 h-6" />
-    </button>
+    <AddToCartButton client:load product={product} />
   </div>
   <p
     class="mt-2 text-yellow-500"
