--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -17,13 +17,13 @@ import CartIndicator from "./CartIndicator.jsx";
   </div>
 
   <div class="flex justify-end gap-4">
-    <span
+    <a
+      href="/cart"
       class="bg-blue-500 text-white py-2 px-4 rounded-lg flex items-center gap-2"
     >
-    <CartIndicator client:load />
+      <CartIndicator client:load />
 
       <CartSVG class="w-6 h-6" />
-      </span>
-      
-    </div>
+    </a>
+  </div>
 </div>
