--- a/src/pages/cart.astro
+++ b/src/pages/cart.astro
@@ -4,28 +4,28 @@ import CartItems from "../components/CartItems.jsx";
 ---
 
 <Layout>
-  <a
-    class="flex items-center"
-    href="/"
-  >
-    <svg
-      class="w-6 h-6"
-      fill="none"
-      stroke="currentColor"
-      viewBox="0 0 24 24"
-      xmlns="http://www.w3.org/2000/svg"
-    >
-      <path
-        stroke-linecap="round"
-        stroke-linejoin="round"
-        stroke-width="2"
-        d="M15 19l-7-7 7-7"
-      ></path>
-    </svg>
-    Volver a la tienda
-  </a>
-  <div class="max-w-6xl mx-auto p-6 bg-gray-100">
-    <h1 class="text-2xl font-bold mb-4">Tu carrito de compras</h1>
+    <div class="max-w-6xl mx-auto p-6 bg-gray-100">
+      <a
+        class="flex items-center"
+        href="/"
+      >
+        <svg
+          class="w-6 h-6"
+          fill="none"
+          stroke="currentColor"
+          viewBox="0 0 24 24"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M15 19l-7-7 7-7"
+          ></path>
+        </svg>
+        Volver a la tienda
+      </a>
+    <h1 class="text-2xl font-bold mt-4 mb-4">Tu carrito de compras</h1>
     <CartItems client:load />
   </div>
 </Layout>
