--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,6 +2,8 @@
 import HandbagSvg from "../assets/handbag.svg";
 import CartSVG from "../assets/cart.svg";
 import CartIndicator from "./CartIndicator.jsx";
+
+const currentPath = Astro.url.pathname;
 ---
 
 <div class="max-w-5xl mx-auto p-4 flex justify-between items-center">
@@ -16,14 +18,18 @@ import CartIndicator from "./CartIndicator.jsx";
     </div>
   </div>
 
-  <div class="flex justify-end gap-4">
-    <a
-      href="/cart"
-      class="bg-blue-500 text-white py-2 px-4 rounded-lg flex items-center gap-2"
-    >
-      <CartIndicator client:load />
+  {
+    currentPath !== "/cart" && (
+      <div class="flex justify-end gap-4">
+        <a
+          href="/cart"
+          class="bg-blue-500 text-white py-2 px-4 rounded-lg flex items-center gap-2"
+        >
+          <CartIndicator client:load />
 
-      <CartSVG class="w-6 h-6" />
-    </a>
-  </div>
+          <CartSVG class="w-6 h-6" />
+        </a>
+      </div>
+    )
+  }
 </div>
