--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -14,7 +14,7 @@ const { product } = Astro.props as { product: Product };
   itemtype="https://schema.org/Product"
 >
   <img
-    class="h-48 w-auto mx-auto rounded-md object-cover"
+    class="h-48 w-auto mx-auto rounded-md object-contain"
     src={product.image}
     alt={`Imagen del producto ${product.title}`}
     itemprop="image"
